fix shadow and gap on react

--- a/component-library/src/components/custom/BccReact/BccReact.css
+++ b/component-library/src/components/custom/BccReact/BccReact.css
@@ -6,7 +6,7 @@
 		@apply flex shrink-0 cursor-pointer items-center justify-center rounded-full transition;
 	}
 	.bcc-react-list {
-		@apply hide-scrollbar ml-2 flex flex-1 items-center gap-1 overflow-x-auto overflow-y-hidden rounded-full;
+		@apply hide-scrollbar ml-2 flex h-8 flex-1 items-center gap-1.5 overflow-visible rounded-full;
 	}
 	.bcc-react-empty {
 		@apply heading-xs flex items-center;
@@ -77,7 +77,7 @@
 	}
 
 	.bcc-react-emoji-list-item {
-		@apply clickable center flex h-8 min-w-7 shrink-0 gap-1 rounded-full px-2 py-1 drop-shadow transition-all hover:scale-105;
+		@apply clickable center my-1 flex h-8 min-w-7 shrink-0 gap-1 rounded-full px-2 py-1 drop-shadow transition-all hover:scale-105;
 		/* Default --not-selected */
 		@apply bg-accent-gray-subtler-default text-default;
 	}
